# evalchemy

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  CONTRIBUTING.md  Makefile  README.md  create_csv.sh  create_csv_helper.py  pyproject.toml  reproduced_benchmarks  reproduced_benchmarks.md
.github/workflows/: black.yaml
configs/: full_gemma9b_gpt4omini0718.yaml  full_gpt4omini0718.yaml  light_gemma9b_gpt4omini0718.yaml  light_gpt4omini0718.yaml  light_gpt4omini0718_jsc.yaml  reasoning.yaml  reasoning_lite.yaml
configs/single_task/: gpqa.yaml  livebench.yaml  livecodebench.yaml  math500.yaml
database/: README.md  config.py  models.py  utils.py
eval/: constants.py  eval.py  eval_tracker.py  task.py  utils.py
eval/chat_benchmarks/: curator_lm.py  precomputed_hf_lm.py  upload_to_hf_lm.py
eval/chat_benchmarks/AIME24/: eval_instruct.py  utils.py
eval/chat_benchmarks/AIME25/: eval_instruct.py
eval/chat_benchmarks/AIME25/data/: aime25.json
eval/chat_benchmarks/AIW/: eval_instruct.py
eval/chat_benchmarks/AIW/data/: aiw_data.json
eval/chat_benchmarks/AMC23/: eval_instruct.py  utils.py
eval/chat_benchmarks/ArenaHardAuto/: eval_instruct.py
eval/chat_benchmarks/BigCodeBench/: README.md  eval_instruct.py  evaluation.py  execution.py  sanitize.py  syncheck.py
eval/chat_benchmarks/BigCodeBench/data/: BigCodeBench-complete-hard.json  BigCodeBench-instruct-hard.json
eval/chat_benchmarks/BigCodeBench/docker/: Dockerfile
eval/chat_benchmarks/BigCodeBench/requirements/: requirements.txt
eval/chat_benchmarks/CruxEval/: eval_instruct.py  evaluation.py  execution.py
eval/chat_benchmarks/CruxEval/data/: cruxeval.jsonl
eval/chat_benchmarks/GPQADiamond/: eval_instruct.py  testing_utils.py
eval/chat_benchmarks/HumanEval/: eval_instruct.py  humaneval.py
eval/chat_benchmarks/HumanEval/utils/: dataset.py  utils.py
eval/chat_benchmarks/HumanEvalPlus/: __init__.py  eval_instruct.py  humaneval.py
eval/chat_benchmarks/HumanEvalPlus/human_eval_plus/: data.py  evaluation.py
eval/chat_benchmarks/HumanEvalPlus/utils/: dataset.py
eval/chat_benchmarks/IFEval/: README.md  eval_instruct.py  evaluation.py  evaluation_main.py  instructions.py  instructions_registry.py  instructions_test.py  instructions_util.py  run.sh
eval/chat_benchmarks/LiveBench/: eval_instruct.py
eval/chat_benchmarks/LiveBench/livebench/: common.py  conversation.py  download_leaderboard.py  download_questions.py  gen_api_answer.py  gen_ground_truth_judgment.py  gen_model_answer.py  show_livebench_result.py
eval/chat_benchmarks/LiveCodeBench/: eval_instruct.py  livecodebench_utils.py
eval/chat_benchmarks/MATH500/: eval_instruct.py
eval/chat_benchmarks/MBPP/: eval_instruct.py  mbpp.py
eval/chat_benchmarks/MBPP/human_eval/: evaluation.py
eval/chat_benchmarks/MBPP/utils/: dataset.py  utils.py
eval/chat_benchmarks/MBPPPlus/: eval_instruct.py  mbppplus.py
eval/chat_benchmarks/MBPPPlus/mbpp_plus/: data.py  execution.py
eval/chat_benchmarks/MBPPPlus/utils/: dataset.py
eval/chat_benchmarks/MTBench/: eval_instruct.py
eval/chat_benchmarks/MTBench/fastchat/: constants.py  conversation.py  utils.py
eval/chat_benchmarks/MTBench/tests/: load_test.py  test_cli.py  test_image_utils.py  test_openai_api.py  test_openai_vision_api.py
eval/chat_benchmarks/MixEval/: README.md  eval_instruct.py  setup.py
eval/chat_benchmarks/MixEval/client/: snova_client.py
eval/chat_benchmarks/MixEval/mix_eval/: compute_metrics.py  evaluate.py  run_eval_example.sh
eval/chat_benchmarks/MultiPLE/: README.md  eval_instruct.py  utils.py
eval/chat_benchmarks/MultiPLE/data/: multipl-e-adb.json  multipl-e-clj.json  multipl-e-cpp.json  multipl-e-cs.json  multipl-e-d.json  multipl-e-dart.json  multipl-e-elixir.json  multipl-e-go.json  multipl-e-hs.json  multipl-e-humaneval-cpp.json  multipl-e-humaneval-cs.json  multipl-e-humaneval-java.json  multipl-e-humaneval-js.json  multipl-e-humaneval-php.json  multipl-e-humaneval-sh.json  multipl-e-humaneval-ts.json  multipl-e-java.json  multipl-e-js.json  multipl-e-julia.json  multipl-e-lua.json  multipl-e-mbpp-java.json  multipl-e-mbpp-js.json  multipl-e-ml.json  multipl-e-php.json  multipl-e-pl.json  multipl-e-r.json  multipl-e-racket.json  multipl-e-rb.json  multipl-e-rs.json  multipl-e-scala.json  multipl-e-sh.json  multipl-e-swift.json  multipl-e-ts.json
eval/chat_benchmarks/MultiPLE/docker/: Dockerfile
eval/chat_benchmarks/MultiPLE/multiple/: containerized_eval.py  eval_adb.py  eval_clj.py  eval_cpp.py  eval_cs.py  eval_dart.py  eval_dfy.py  eval_dlang.py  eval_elixir.py  eval_fs.py  eval_go.py  eval_hs.py  eval_java.py  eval_javascript.py  eval_julia.py  eval_lean.py  eval_lua.py  eval_luau.py  eval_matlab.py  eval_ocaml.py  eval_php.py  eval_pl.py  eval_python.py  eval_r.py  eval_racket.py  eval_ruby.py  eval_rust.py  eval_scala.py  eval_sh.py  eval_swift.py  eval_ts.py  eval_v.py  evaluation.py  execution.py  generic_eval.py  libeval.py  main.py  simple_eval.py
eval/chat_benchmarks/RepoBench/: eval_instruct.py  run.py
eval/chat_benchmarks/RepoBench/archive_data/: utils.py
eval/chat_benchmarks/RepoBench/evaluation/: metrics.py
eval/chat_benchmarks/SWEbench/: eval_instruct.py
eval/chat_benchmarks/WildBench/: eval_instruct.py  requirements.txt
eval/chat_benchmarks/alpaca_eval/: eval_instruct.py
eval/chat_benchmarks/scibench/: eval_instruct.py
eval/chat_benchmarks/zeroeval/: .gitignore  eval_instruct.py
eval/distributed/: README.md  SETUP_CAPELLA.md  SETUP_LEONARDO.md  benchmark_plot.py  launch.py  process_shard.py  process_shards_capella.sbatch  process_shards_leonardo.sbatch  process_shards_leonardo_tp.sbatch
eval/examples/: alpaca_diff_annotator.sh  database_logging.sh  dcftv3_on_alpaca_greedy_bs1.sh  dcftv3_on_alpaca_greedy_bs32.sh  mistral_on_alpaca.sh  mistral_on_alpaca_greedy_bs1.sh  mistral_on_alpaca_greedy_bs32.sh  mistral_on_many_evals.sh  multi_gpu.sh
results/model_curator_model_args_pretrained=claude-3-5-haiku-20241022,tokenized_requests=False/weighted_alpaca_eval_gpt-4o-mini-2024-07-18/: annotations.json  leaderboard.csv
(+433 files in other folders)
